add blos images and more

--- a/blogs.html
+++ b/blogs.html
@@ -144,9 +144,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="pay-per-click-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/Pay Per Click.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -159,11 +160,13 @@
                                 <p class="m-0">March 18, 2022</p>
                             </div>
                         </div>
+                     </a>
                     </div>
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="ecommerce-SEO-services-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/Ecommerce SEO Service.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -176,11 +179,13 @@
                                 <p class="m-0">Octuber 5, 2021</p>
                             </div>
                         </div>
+                     </a>
                     </div>
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="social-media-marketing-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/Social Media Marketing.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -193,11 +198,13 @@
                                 <p class="m-0">August 2, 2022</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="Facebook-marketing-expert-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/Facebook Marketing Expert.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -210,11 +217,13 @@
                                 <p class="m-0">March 2, 2022</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="Digital-marketing-agencies-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/Digital Marketing Agency.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -227,11 +236,13 @@
                                 <p class="m-0">April 21, 2022</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-md-6 col-lg-4 mt-5">
+                     <a href="Search-engine-optimization-blog.html" class="blog-link">
                         <div class="blog-card">
                             <div class="blog-card-header">
-                                <img src="assets/images/Group 193.png" class="img-fluid">
+                                <img src="assets/images/new/Blogs/How SEO Work.jpg" class="img-fluid">
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
@@ -244,6 +255,7 @@
                                 <p class="m-0">June 20, 2021</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -289,9 +301,9 @@
             <div>
                <p class="footer-sub-heading">LONDON OFFICE</p>
                <ul class="footer-ul">
-                  <li><a href="#">Phone: 0203 963 0810 </a></li>
-                  <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                  <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                  <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                  <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                  <li><a href="#">info@sahaa.me</a></li>
                </ul>
             </div>
          </div>
@@ -299,9 +311,9 @@
             <div>
                <p class="footer-sub-heading">DUBAI OFFICE</p>
                <ul class="footer-ul">
-                  <li><a href="#">Phone: 0203 963 0810 </a></li>
-                  <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                  <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                  <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                  <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                  <li><a href="#">info@sahaa.me</a></li>
                </ul>
             </div>
          </div>
