--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
          </div>
       </div>
       <ul class="top-header-vertical-ul">
-         <li><a href="#">FaceBook</a></li>
-         <li><a href="#">Instagram</a></li>
-         <li><a href="#">Linkdin</a></li>
+         <li><a href="https://www.facebook.com/Sahaa.me.uae/?ref=pages_you_manage\">FaceBook</a></li>
+         <li><a href="https://www.instagram.com/sahaa.me/">Instagram</a></li>
+         <li><a href="https://www.linkedin.com/company/76628889/admin/">Linkdin</a></li>
       </ul>
    </section>
    <!-- about us section start -->
@@ -604,21 +604,17 @@
                      </h1>
                      <div class="row">
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Balance 1.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/Astrazenica.png" class="partner-logo img-fluid"></div>
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Business Idea.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/Crown Plaza.png" class="partner-logo img-fluid"></div>
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Cygnus.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/FHC Group.png" class="partner-logo img-fluid"></div>
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Elite Hub.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/Kafa Properties.png" class="partner-logo img-fluid"></div>
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Fort Realtity.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/Legal General.png" class="partner-logo img-fluid"></div>
                         <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Hamnet Logo.png" class="partner-logo img-fluid"></div>
-                        <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/Homes Finder.png" class="partner-logo img-fluid"></div>
-                        <div class="col-4 mt-4 mt-md-4 mt-lg-2 mt-xl-4 logo-col"><img
-                              src="assets/images/new/clients/MIVA.png" class="partner-logo img-fluid"></div>
+                              src="assets/images/new/Clients-Logos/Travis Perkins.png" class="partner-logo img-fluid"></div>
                      </div>
                   </div>
                </div>
@@ -1079,40 +1075,40 @@
       <div class="container">
          <div class="row">
             <div class="col-md-4 mt-3">
+               <a href="ecommerce-SEO-services-blog.html" class="blog-link">
                <div class="news-card">
                   <div class="card-header text-center">
-                     <img src="assets/images/Group 648.png" class="img-fluid">
+                     <img src="assets/images/new/Blogs/Ecommerce SEO Service.jpg" class="img-fluid">
                   </div>
                   <div class="card-body">
-                     <h3>Erat Vehicula Gravida Seden
-                        Tincidunt Tortor.
+                     <h3>Ecommerce SEO services
                      </h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
+                     <p>If you're running an online store, then you know how important it is to have a strong SEO presence. After all, you want your site to show up as high as possible in search engine results pages, so that potential customers can find you easily.</p>
                   </div>
                </div>
+            </a>
             </div>
             <div class="col-md-4 mt-3">
+               <a href="social-media-marketing-blog.html" class="blog-link">
                <div class="news-card">
                   <div class="card-header text-center">
-                     <img src="assets/images/Group 650.png" class="img-fluid">
+                     <img src="assets/images/new/Blogs/Social Media Marketing.jpg" class="img-fluid">
                   </div>
                   <div class="card-body">
-                     <h3>Erat Vehicula Gravida Seden
-                        Tincidunt Tortor.
+                     <h3>Social Media Marketing
                      </h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
+                     <p>Social media marketing is one of the most efficient and effective ways to connect with customers and promote your brand. It allows customers and customers’ friends and followers to connect with your company or product in a variety of ways.</p>
                   </div>
                </div>
+            </a>
             </div>
             <div class="col-md-4 order-first order-md-last mt-3">
-               <h6 class="section-small-h6 m-0">LATTEST BLOGS</h6>
+               <h6 class="section-small-h6 m-0">LATEST BLOGS</h6>
                <h1 class="section-h45 mt-4">Latest News<br>
                   And Article<br>
                   Modern Design.
                </h1>
-               <button class="btn btn-view-bolgs mt-4">View All Blogs</button>
+               <a href="blogs.html" class="btn btn-view-bolgs mt-4">View All Blogs</a>
             </div>
          </div>
       </div>
@@ -1413,9 +1409,9 @@
                <div>
                   <p class="footer-sub-heading">LONDON OFFICE</p>
                   <ul class="footer-ul">
-                     <li><a href="#">Phone: 0203 963 0810 </a></li>
-                     <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                     <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                     <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                     <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                     <li><a href="#">info@sahaa.me</a></li>
                   </ul>
                </div>
             </div>
@@ -1423,9 +1419,9 @@
                <div>
                   <p class="footer-sub-heading">DUBAI OFFICE</p>
                   <ul class="footer-ul">
-                     <li><a href="#">Phone: 0203 963 0810 </a></li>
-                     <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                     <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                     <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                     <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                     <li><a href="#">info@sahaa.me</a></li>
                   </ul>
                </div>
             </div>
