--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -662,9 +662,9 @@
                   <div>
                      <p class="footer-sub-heading">LONDON OFFICE</p>
                      <ul class="footer-ul">
-                        <li><a href="#">Phone: 0203 963 0810 </a></li>
-                        <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                        <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                        <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                        <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                        <li><a href="#">info@sahaa.me</a></li>
                      </ul>
                   </div>
                </div>
@@ -672,9 +672,9 @@
                   <div>
                      <p class="footer-sub-heading">LONDON OFFICE</p>
                      <ul class="footer-ul">
-                        <li><a href="#">Phone: 0203 963 0810 </a></li>
-                        <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                        <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                        <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                        <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                        <li><a href="#">info@sahaa.me</a></li>
                      </ul>
                   </div>
                </div>
