--- a/Search-engine-optimization-blog.html
+++ b/Search-engine-optimization-blog.html
@@ -130,7 +130,7 @@
         <section class="blog-details-section">
             <div class="container">
                 <div class="blog-img text-center">
-                    <img src="assets/images/blog-details.webp" class="img-fluid">
+                    <img src="assets/images/new/Blogs/How SEO Work Full Banner.jpg" class="img-fluid">
                 </div>
                 <div class="blog-user-img text-center">
                     <div class="img">
@@ -278,9 +278,9 @@
                  <div>
                     <p class="footer-sub-heading">LONDON OFFICE</p>
                     <ul class="footer-ul">
-                       <li><a href="#">Phone: 0203 963 0810 </a></li>
-                       <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                       <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                       <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                       <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                       <li><a href="#">info@sahaa.me</a></li>
                     </ul>
                  </div>
               </div>
@@ -288,9 +288,9 @@
                  <div>
                     <p class="footer-sub-heading">DUBAI OFFICE</p>
                     <ul class="footer-ul">
-                       <li><a href="#">Phone: 0203 963 0810 </a></li>
-                       <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                       <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                       <li><a href="#">Phone: +971 54 351 2089 </a></li>
+                       <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
+                       <li><a href="#">info@sahaa.me</a></li>
                     </ul>
                  </div>
               </div>
