add what we do page images and links

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -172,21 +172,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Social-Media-Agency-in-London/Social Media Agency In london.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Social Media</h3>
+                                 <p class="mt-3 global-p">Working with our social media agency will ensure your eCommerce business goes from power to power, to say the best things to the right people and at the ideal times!</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Social-Media-Agency-in-London/Social Media Agency In london.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Social Media</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./social-media-marketing.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -195,21 +197,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/PPC-Ads/Digital Marketing Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Pay Per Click</h3>
+                                 <p class="mt-3 global-p">We have cultured some of the most promising, savviest experts in the business. Each is certified by Google with the skills to research analyze and deliver excellent results that move the needle. We help our clients succeed with patented technology, a refined strategy, and a professional team.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/PPC-Ads/Digital Marketing Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Pay Per Click</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./pay-per-click.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -218,21 +222,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/SEO/SEO Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>SEO</h3>
+                                 <p class="mt-3 global-p">Search Engine Optimization is mandatory for boosting visibility, getting trust, and authority. It keeps your site and that is why your brand is competitive in an ever0changing industry. Working with our SEO Agency in Dubai provides a boost of OFF and ON pages.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/SEO/SEO Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>SEO</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./search-engine-optimisation.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -241,21 +247,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Website-Development/Website Development Agency.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Website Development/h3>
+                                 <p class="mt-3 global-p">Your website is your number 1 sales tool and here at our site, we help you achieve its full potential.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Website-Development/Website Development Agency.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Website Development/h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./web-development-agency.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -264,21 +272,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Socia-Media-Management/SM Management.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Social Media Management</h3>
+                                 <p class="mt-3 global-p">Build engagement and strategically boost your social media existence through shareable, likable, and engaging, content and posts.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Socia-Media-Management/SM Management.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Social Media Management</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./social-media-marketing.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -287,21 +297,23 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Email-Marketing/Email Marketing Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Email Marketing</h3>
+                                 <p class="mt-3 global-p">Defining your target audience and researching your competitors to make sure your Email Marketing planning is consistently many steps ahead.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Email-Marketing/Email Marketing Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Email Marketing</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./email-marketing.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
@@ -310,21 +322,48 @@
                   <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
                      <div class="main-service-card position-relative">
                         <div class="services-card">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Digital-Strategy/Digital Strategy.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
-                                 <p class="mt-3 global-p">It’s not just aimless scrolling. 31% of Instagram users are there to shop and buy. We’ll help you capitalise on this commercial platform to inspire and engage audiences, and ultimately drive profit and purchases for your brand.</p>
+                                 <h3>Digital Marketing</h3>
+                                 <p class="mt-3 global-p">A useful digital strategy is a model for your brand’s success.</p>
                               </div>
                            </div>
                         </div>
                         <div class="services-card service-card-overlay-b">
-                           <img src="assets/images/Image-12.png" class="img-fluid">
+                           <img src="assets/images/new/What-We-Do/Digital-Strategy/Digital Strategy.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
                            <div class="service-card-overlay">
                               <div class="overlay-text">
-                                 <h3>Instagram Ads</h3>
+                                 <h3>Digital Marketing</h3>
                                  <p class="mt-3 global-p">Start your online journey</p>
-                                 <button class="btn btn-learn-outline">Learn More</button>
+                                 <a href="./digital-strategy.html" class="btn btn-learn-outline">Learn More</a>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-4 mt-3">
+                     <div class="main-service-card position-relative">
+                        <div class="services-card">
+                           <img src="assets/images/new/What-We-Do/Content-Marketing/Branding Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
+                           <div class="service-card-overlay">
+                              <div class="overlay-text">
+                                 <h3>Content Marketing</h3>
+                                 <p class="mt-3 global-p">We create content that speaks to nurtures and inspires your targeted audience and assists your brand reach new heights in the Digital space.</p>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="services-card service-card-overlay-b">
+                           <img src="assets/images/new/What-We-Do/Content-Marketing/Branding Agency in Dubai.jpg" class="img-fluid">
+                           <div class="bg-black-overlay-light"></div>
+                           <div class="service-card-overlay">
+                              <div class="overlay-text">
+                                 <h3>Content Marketing</h3>
+                                 <p class="mt-3 global-p">Start your online journey</p>
+                                 <a href="./content-marketing.html" class="btn btn-learn-outline">Learn More</a>
                               </div>
                            </div>
                         </div>
